# Python

./: LICENSE  README.md
Desenvolvimento_API_Flask/dioBank/: pyproject.toml
Desenvolvimento_API_Flask/dioBank/src/: app.py
Dicionario/: Examples.py
Examples/: CalculoHe.py  DirHelp.py  acessando_dados_set.py  list.py  percorrendo_set.py  prova.py  set.py
Python_POO/: 01_desafio_bike.py
Python_POO/Decoradores/: decorador.py  inner_fuction.py
Python_POO/Encapsulamento/: Exemplos.py
Python_POO/Gerador/: yield.py
Python_POO/Heranca/: Herana_simples.py
Python_POO/Iterador/: Loop_Infinito.py
Python_POO/datetime/: example.py  timezon.py
Python_POO/datetime/__pycache__/: manipulando.py
Python_POO/manipulandoArquivos/: manipulador.py  texto.txt
Python_POO/treino/: Nota.py  decorador.py
Uniter/edu/trabalhos/Logica/: exercici1.py  exercicio2.py  exercicio3.py  exercicio4.py
bankAccount/: Bank_V3.py  user_bank.py
bankAccountDb/: BankSys.db  main.py
cezar/revisao/desafios/Desafio1/: banco.py
desafios/: desafio2.py  desafioPOO.py  desafioPOO3.py
python_dio/Backend/SQL/: 01_dbapi.py  02_SQL_Injection.py  03_Gerenciamento_Transicoes.py  conectandoSQLlite.py  meu_banco.db
python_dio/desafio/: teste.py
