[project]
name = "diobank"
version = "0.1.0"
description = ""
authors = [
    {name = "DevCezarIs",email = "cezar.dev24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
